[package]
name = "omnipair-amm-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with Omnipair AMM, built for Jupiter"

[dependencies]
anchor-lang = "0.31.1"
anyhow = "1"
borsh = "0.10"
jupiter-amm-interface = "0.6.0"
rust_decimal = "1.26.1"

[dev-dependencies]
solana-sdk = ">=2.2"
solana-rpc-client = ">=2.2"
solana-commitment-config = ">=2.2"
ahash = "0.8.12"
